front-end/kube/service-address-admin-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-address-admin-frontend
  labels:
    app: service-address-admin-frontend
    project: service-address-admin
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: service-address-admin-frontend
